shared_memory_allocator/g++.log
In file included from /usr/include/c++/7/bits/shared_ptr.h:52:0,
                 from /usr/include/c++/7/memory:81,
                 from exer.container.cpp:9:
/usr/include/c++/7/bits/shared_ptr_base.h: In instantiation of ‘std::__shared_ptr<_Tp, _Lp>::__shared_ptr(_Yp*, _Deleter, _Alloc) [with _Yp = std::__cxx11::basic_string<char>; _Deleter = deleter_t<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >; _Alloc = questrel::shared_memory_allocator<std::map<std::shared_ptr<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >, std::shared_ptr<std::__cxx11::basic_string<char> >, key_less, questrel::shared_memory_allocator<std::pair<const std::shared_ptr<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >, std::shared_ptr<std::__cxx11::basic_string<char> > > > > >; <template-parameter-2-4> = void; _Tp = std::__cxx11::basic_string<char>; __gnu_cxx::_Lock_policy _Lp = (__gnu_cxx::_Lock_policy)2]’:
/usr/include/c++/7/bits/shared_ptr.h:184:57:   required from ‘std::shared_ptr<_Tp>::shared_ptr(_Yp*, _Deleter, _Alloc) [with _Yp = std::__cxx11::basic_string<char>; _Deleter = deleter_t<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >; _Alloc = questrel::shared_memory_allocator<std::map<std::shared_ptr<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >, std::shared_ptr<std::__cxx11::basic_string<char> >, key_less, questrel::shared_memory_allocator<std::pair<const std::shared_ptr<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >, std::shared_ptr<std::__cxx11::basic_string<char> > > > > >; <template-parameter-2-4> = void; _Tp = std::__cxx11::basic_string<char>]’
exer.container.cpp:290:49:   required from here
/usr/include/c++/7/bits/shared_ptr_base.h:1100:4: error: static assertion failed: deleter expression d(p) is well-formed
    static_assert(__is_invocable<_Deleter&, _Yp*&>::value,
    ^~~~~~~~~~~~~
/usr/include/c++/7/bits/shared_ptr_base.h: In instantiation of ‘std::__shared_count<_Lp>::__shared_count(_Ptr, _Deleter, _Alloc) [with _Ptr = std::__cxx11::basic_string<char>*; _Deleter = deleter_t<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >; _Alloc = questrel::shared_memory_allocator<std::map<std::shared_ptr<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >, std::shared_ptr<std::__cxx11::basic_string<char> >, key_less, questrel::shared_memory_allocator<std::pair<const std::shared_ptr<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >, std::shared_ptr<std::__cxx11::basic_string<char> > > > > >; __gnu_cxx::_Lock_policy _Lp = (__gnu_cxx::_Lock_policy)2]’:
/usr/include/c++/7/bits/shared_ptr_base.h:1098:64:   required from ‘std::__shared_ptr<_Tp, _Lp>::__shared_ptr(_Yp*, _Deleter, _Alloc) [with _Yp = std::__cxx11::basic_string<char>; _Deleter = deleter_t<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >; _Alloc = questrel::shared_memory_allocator<std::map<std::shared_ptr<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >, std::shared_ptr<std::__cxx11::basic_string<char> >, key_less, questrel::shared_memory_allocator<std::pair<const std::shared_ptr<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >, std::shared_ptr<std::__cxx11::basic_string<char> > > > > >; <template-parameter-2-4> = void; _Tp = std::__cxx11::basic_string<char>; __gnu_cxx::_Lock_policy _Lp = (__gnu_cxx::_Lock_policy)2]’
/usr/include/c++/7/bits/shared_ptr.h:184:57:   required from ‘std::shared_ptr<_Tp>::shared_ptr(_Yp*, _Deleter, _Alloc) [with _Yp = std::__cxx11::basic_string<char>; _Deleter = deleter_t<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >; _Alloc = questrel::shared_memory_allocator<std::map<std::shared_ptr<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >, std::shared_ptr<std::__cxx11::basic_string<char> >, key_less, questrel::shared_memory_allocator<std::pair<const std::shared_ptr<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >, std::shared_ptr<std::__cxx11::basic_string<char> > > > > >; <template-parameter-2-4> = void; _Tp = std::__cxx11::basic_string<char>]’
exer.container.cpp:290:49:   required from here
/usr/include/c++/7/bits/shared_ptr_base.h:623:11: error: no match for call to ‘(deleter_t<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >) (std::__cxx11::basic_string<char>*&)’
        __d(__p); // Call _Deleter on __p.
        ~~~^~~~~
exer.container.cpp:61:25: note: candidate: void deleter_t<T>::operator()(T*) [with T = std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> >]
 struct deleter_t { void operator()(T *p) { delete p; } };
                         ^~~~~~~~
exer.container.cpp:61:25: note:   no known conversion for argument 1 from ‘std::__cxx11::basic_string<char>*’ to ‘std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> >*’
In file included from /usr/include/c++/7/bits/shared_ptr.h:52:0,
                 from /usr/include/c++/7/memory:81,
                 from exer.container.cpp:9:
/usr/include/c++/7/bits/shared_ptr_base.h: In instantiation of ‘void std::_Sp_counted_deleter<_Ptr, _Deleter, _Alloc, _Lp>::_M_dispose() [with _Ptr = std::__cxx11::basic_string<char>*; _Deleter = deleter_t<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >; _Alloc = questrel::shared_memory_allocator<std::map<std::shared_ptr<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >, std::shared_ptr<std::__cxx11::basic_string<char> >, key_less, questrel::shared_memory_allocator<std::pair<const std::shared_ptr<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >, std::shared_ptr<std::__cxx11::basic_string<char> > > > > >; __gnu_cxx::_Lock_policy _Lp = (__gnu_cxx::_Lock_policy)2]’:
exer.container.cpp:445:1:   required from here
/usr/include/c++/7/bits/shared_ptr_base.h:470:25: error: no match for call to ‘(deleter_t<std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> > >) (std::__cxx11::basic_string<char>*&)’
       { _M_impl._M_del()(_M_impl._M_ptr); }
         ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~
exer.container.cpp:61:25: note: candidate: void deleter_t<T>::operator()(T*) [with T = std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> >]
 struct deleter_t { void operator()(T *p) { delete p; } };
                         ^~~~~~~~
exer.container.cpp:61:25: note:   no known conversion for argument 1 from ‘std::__cxx11::basic_string<char>*’ to ‘std::__cxx11::basic_string<char, std::char_traits<char>, questrel::shared_memory_allocator<char> >*’
